tests/NormalTests/paczka1/fuzzy1/29177540.err
Error in line 3: A328 A778 51,0
Error in line 7: A328 A778 51,3
Error in line 6: lyZ1Y A328 72,9
Error in line 24: lyZ1Y '114 84,0
Error in line 16: lyZ1Y A778 48,0
Error in line 26: 86GcoZ S114 69,4
Error in line 18: ZvTf A328 80,2
Error in line 36: 86GcoZ A224 297,73
Error in line 30: 86GcoZ A224 60,8
